# ghview

./: .gitignore  .mcp.json  .mise.toml  .prettierignore  .wtp.yml  CLAUDE.md  Cargo.toml  fnox.toml  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.cctmp/trash/: desktop-test.ts
.cctmp/trash/.testdriver/: hello-world.yaml
.claude/: settings.json
.claude/scripts/: pre-commit.sh
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
.testdriver/: testdriver.yaml
e2e/: hello-world.spec.ts
playwright-report/: index.html
src/: App.css  App.test.tsx  App.tsx
src-mcp/: Cargo.toml
src-mcp/src/: main.rs
src-mcp/src/ipc/: client.rs
src-mcp/src/mcp/: mod.rs  protocol.rs  server.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: list_windows.rs
src-tauri/src/: auth.rs  github.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  credential.rs  debug.rs  github.rs  mod.rs
src-tauri/src/ipc/: mod.rs  protocol.rs  server.rs
src-tauri/src/models/: pull_request.rs
src/components/: Auth.css  Auth.test.tsx  Auth.tsx  PrCard.css  PrCard.test.tsx  PrCard.tsx  PrList.css  PrList.test.tsx  PrList.tsx  PullRequestList.test.tsx  PullRequestList.tsx  index.ts
src/hooks/: index.ts  useGitHubAuth.ts  useGitHubPRs.ts
src/types/: github.ts
test-results/: .last-run.json
