[workspace]
members = ["src-tauri", "src-mcp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["you"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
